# KLiteInfer

./: .gitignore  README.md  main.cpp
armadillo/: CMakeLists.txt  docs.html
armadillo/include/armadillo_bits/: Cube_meat.hpp
include/base/: alloc.h  base.h  buffer.h  tick.h
include/config/: config.h
include/model/: model.h  paddleocr.h
include/op/: RMSNorm.h  add.h  embedding.h  encode.h  layer.h  matmul.h  mha.h  rmsnorm.h  rope.h  swglu.h
include/sampler/: argmax_sampler.h  sampler.h
include/tensor/: tensor.h
src/base/: alloc.cpp  base.cpp  buffer.cpp  cpu_alloc.cpp  gpu_alloc.cpp  unicode.cpp
src/config/: config.cpp
src/model/: model.cpp  paddleocr.cpp  qwen3.cpp
src/op/: RMSNorm.cpp  add.cpp  embedding.cpp  encode.cpp  layer.cpp  matmul.cpp  mha.cpp  ropa.cpp  swglu.cpp  swiglu.cpp
src/op/kernels/: kernels_interface.cpp  kernels_interface.h
src/op/kernels/cpu/: add_kernel.cpp  add_kernel.h  emb_kernel.h  rmsnorm_kernel.cpp
src/op/kernels/cuda/: argmax_kernel.cuh  matmul_kernel.cuh
src/op/kernels/gpu/: add_kernel.cu  add_kernel.cuh  argmax_kernel.cu  emb_kernel.cu  matmul_kernel.cu  matmul_kernel.cuh  mha_kernel.cu  mha_kernel.cuh  rms_norm_kernel.cu  rms_norm_kernel.cuh  rope_kernel.cu  swiglu_kernel.cu
src/sampler/: argmax_sampler.cpp
src/tensor/: tensor.cpp
test/: CMakeLists.txt  main.cpp  utils.cu
test/base/: test_alloc.cpp
test/base_test/: test_alloc.cpp
test/op_test/: test_cuda_add.cpp  test_cuda_emb.cpp  test_cuda_matmul.cpp  test_cuda_rmsnorm.cpp  test_cuda_rope.cpp  test_cuda_softmax.cpp  test_cuda_swiglu.cpp  test_scale.cpp
